[package]
name = "charcounts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = false
lto = true
codegen-units=1
opt-level = 3
panic = 'abort'  # does cleanup upon panics

[dependencies]
flate2 = "1.0.14"
zstd = "0.9.0+zstd.1.5.0"
anyhow = "1.0.42"
grep-cli = "0.1.5"
